# d455-lawn-care-system

./: .gitignore  PACKAGE_STATUS.md  README.md  README_SCRIPTS.md  analyze_camera_performance.py  demo_nav2_integration.py  evaluate_detection_performance.py  gazebo_parity_analysis.py  quick_record.sh  record_lawn_care_data.py  record_video_streams.py  run_evaluation.sh  run_parity_test.sh  show_evaluation_results.py  start_complete_recording.sh  start_lawn_care_system.sh  stop_lawn_care_system.sh  test_costmap_integration.py  test_coverage_launch.py  test_coverage_patterns.py  test_gazebo_parity.py  test_laser_targeting.py
evaluation_20250825_084404/: evaluation_data.json  performance_report.txt
lawn_bag/: metadata.yaml
src/d455_lawn_care/: README_LASER_SAFETY.md  package.xml  setup.py
src/d455_lawn_care/config/: grass_detector_params.yaml  laser_safety_config.yaml  lawn_care_params.yaml  nav2_lawn_mowing_params.yaml  tuned_detection_params.yaml
src/d455_lawn_care/d455_lawn_care/: costmap_generator.py  coverage_path_planner.py  grass_detector.py  grass_detector_simple.py  laser_safety_monitor.py  laser_weed_incisor.py  laser_weed_incisor_simple.py  obstacle_detector.py  obstacle_detector_simple.py  simple_coverage_planner.py
src/d455_lawn_care/launch/: d455_lawn_care_launch.py  gazebo_lawn_test.launch.py  laser_weed_incisor_launch.py  lawn_care_system.launch.py  nav2_lawn_mowing_launch.py
src/d455_lawn_care/msg/: GrassDetection.msg  LaserStatus.msg  LawnStatus.msg  Obstacle.msg  ObstacleArray.msg
src/d455_lawn_care/srv/: CalibrateGrassDetection.srv  LaserCalibration.srv  LaserTargeting.srv  SetMowingPattern.srv
src/d455_lawn_care/worlds/: lawn_test.world
